fix: webinar section z-index

--- a/css/webinar.css
+++ b/css/webinar.css
@@ -4,7 +4,7 @@
     min-height: 584px;
     width: 100vw;
     max-width: 1440px;
-    z-index: -2;
+    z-index: 0;
 }
 
 .webinar > div {
